--- a/index.html
+++ b/index.html
@@ -6,21 +6,25 @@
   <title>CARAVAN</title>
 </head>
 <body>
-  <div class="header">
-    <div class="header-top">
-      <h1>CARAVAN</h1>
-    </div>
-    <div class="header-bottom">
-      <nav>
-        <ul>
-          <li>Home</li>
-          <li>About</li>
-          <li>Topic</li>
-        </ul>
-      </nav>
-    </div>
-  </div>
-  
+  <header>
+    <h1 class="heading">
+      <a href="index.html">
+        CARAVAN
+      </a>
+    </h1>
+    <nav>
+      <ul class="nav-list">
+        <li class="nav-item">
+          <a href="index.html">Home</a>
+        </li>
+        <li class="nav-item">About</li>
+        <li class="nav-item">Topic</li>
+      </ul>
+    </nav>
+  </header>
+
+
+
   <div class="main-visual">
     <div class="main-visual-content"></div>
   </div>
@@ -29,6 +33,8 @@
     <div class="blog"></div>
     <div class="sidebar"></div>
   </div>
-  <div class="footer"></div>
+  <footer>
+    <p class="footer-text">&copy;All rights reserved by Infratop.Inc.</p>
+  </footer>
 </body>
 </html>
